opam-version: "1.2"

version: "dev"
homepage: "https://github.com/aantron/lwt_ssl"
doc: "https://github.com/aantron/lwt_ssl/blob/master/src/lwt_ssl.mli"
bug-reports: "https://github.com/aantron/lwt_ssl/issues"
license: "LGPL with OpenSSL linking exception"

authors: [
  "Jérôme Vouillon"
  "Jérémie Dimino"
]
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
dev-repo: "https://github.com/aantron/lwt_ssl.git"

depends: [
  "base-unix"
  "dune"
  "lwt" {>= "3.0.0"}
  "ssl" {>= "0.5.0"}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
